--- a/src/main/resources/static/stronka.css
+++ b/src/main/resources/static/stronka.css
@@ -1,38 +1,100 @@
 body{
-    width: 100%;
-    max-height: 100vh;
-    background-color: rgb(40, 135, 219);
+    max-width: 100%;
+    max-height: 100%;
+    background-color: rgb(0, 0, 0);
     margin: 0px;
 }
 .container{
-    width: 100%;
-    max-height:100vh;
-    margin-top: 0px;
-    background-color: rgb(255, 0, 0);
+    max-width: 100%;
+    max-height:100%;
+    margin: 0;
+    background-color: rgb(255, 255, 255);
+    display: flex;
+    flex-direction: column;
+
 }
 .heading{
-    width: 100%;
-    height: 7vh;
+    width: 100% !important;
+    height: 5vh;
     margin-top: 0px;
-    background-color: rgb(169, 255, 95);
+    background-color: rgb(198, 232, 136);
+    border-bottom-style: solid;
+    border-width: 2px;
+    justify-content: space-between;
+    display: flex;
+    align-items: center;
+
+}
+.dwaf{
+    display: flex;
 }
 .leftbar{
-    width: 20%;
-    height: 93vh;
-    margin-right: 0px;
-    background-color: rgb(244, 255, 234);
-    align-self:auto;
-    position:fixed;
+    margin:0;
+    background-color: rgb(226, 233, 252);
+    border-right-color: black;
+    border-width: 5px;
+    border-right-style: solid;
+    margin-top:0;
+    width: 15%;
+    height: 95vh;
+    display: flex;
+    justify-content: space-between;
+
 }
 .contentspace{
-    margin: 0px;
+    background-color: rgb(255, 255, 255);
+    display: flex;
+    justify-content: space-between;
     width: 100%;
-    height: 93vh;
-    background-color: brown;
+    height: 95vh;
+    flex-direction: column;
 }
 li{
     list-style-type: none;
     text-align: center;
     padding-top: 50px;
     font-size: 20px;
+}
+.logo{
+    max-width: 20%;
+    display: flex;
+    justify-content: center;
+    margin-left: 10%;
+
+}
+.logowanie{
+    max-width: 20%;
+    display: flex;
+    justify-content: center;
+    margin-right: 5%;
+    text-align: center;
+
+}
+.lmenu{
+    margin-left: 15%;
+    align-content: center;
+    justify-content: center;
+}
+.zdjecie{
+    height: 120px;
+
+    text-align: center;
+}
+.nazwap{
+
+    text-align: center;
+
+}
+.kup{
+
+    text-align: center;
+    margin: 0;
+}
+table{
+    border:0px solid black;
+    border-collapse:collapse
+}
+tr{
+    border-bottom:5px solid black;
+    border-collapse:collapse
 }
